; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/helper/extr_tls-helper.c_pteTlsSetValue.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/helper/extr_tls-helper.c_pteTlsSetValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PTE_OS_OK = common dso_local global i32 0, align 4
@PTE_OS_INVALID_PARAM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pteTlsSetValue(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to i8**
  store i8** %10, i8*** %8, align 8
  %11 = load i8**, i8*** %8, align 8
  %12 = icmp ne i8** %11, null
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load i8*, i8** %6, align 8
  %15 = load i8**, i8*** %8, align 8
  %16 = load i32, i32* %5, align 4
  %17 = sub i32 %16, 1
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds i8*, i8** %15, i64 %18
  store i8* %14, i8** %19, align 8
  %20 = load i32, i32* @PTE_OS_OK, align 4
  store i32 %20, i32* %7, align 4
  br label %23

21:                                               ; preds = %3
  %22 = load i32, i32* @PTE_OS_INVALID_PARAM, align 4
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %21, %13
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
